<resources>
    <string name="app_name">hw5_2</string>
    <string name="fname">First name</string>
    <string name="sname">Second name</string>
    <string name="you">You</string>
    <string name="me">Me</string>
    <string name="love_calc">Love calculator</string>
    <string name="calc">Calculate</string>
    <string name="home">Home</string>
    <string name="history">History</string>
    <string name="procent">0%</string>
    <string name="score">Your Score</string>
    <string name="try_again">Try Again</string>
    <string name="start">Get Started</string>
    <string name="title_start">Its Fun and Many More</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="love_history">history\n</string>
    <string name="back">back</string>
</resources>