<?xml version="1.0" encoding="utf-8"?>
<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    tools:context=".ui.fragment.Love.LoveCalculatorFragment">

    <ProgressBar
        android:id="@+id/progressBar"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:visibility="gone"
        />

    <androidx.cardview.widget.CardView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_margin="10dp"
        android:padding="16dp"
        app:cardCornerRadius="16dp"
        android:background="@drawable/bordered_background">

        <FrameLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:orientation="vertical">
                <ImageView
                    android:id="@+id/iv_big_heart"
                    android:layout_width="match_parent"
                    android:layout_height="250dp"
                    android:src="@drawable/item_heart_ma" />

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_margin="10dp"
                    android:text="@string/love_calc"
                    android:textColor="@color/blue_isn"
                    android:textSize="30sp"
                    android:textStyle="bold" />

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="16dp"
                    android:layout_marginBottom="16dp"
                    android:orientation="vertical"
                    android:weightSum="4">

                    <TextView
                        android:id="@+id/tv_fname"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginStart="10dp"
                        android:layout_marginBottom="8dp"
                        android:text="@string/fname" />

                    <EditText
                        android:id="@+id/et_fname"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginHorizontal="10dp"
                        android:layout_marginBottom="16dp"
                        android:background="@drawable/rounded_edittext"
                        android:hint="@string/you"
                        android:padding="15dp" />

                    <TextView
                        android:id="@+id/tv_sname"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginStart="10dp"
                        android:layout_marginBottom="8dp"
                        android:text="@string/sname" />

                    <EditText
                        android:id="@+id/et_sname"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginHorizontal="10dp"
                        android:layout_marginBottom="16dp"
                        android:background="@drawable/rounded_edittext"
                        android:hint="@string/me"
                        android:padding="15dp" />
                </LinearLayout>

                <Button
                    android:id="@+id/btn_calculate"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center"
                    android:layout_margin="20dp"
                    android:backgroundTint="@color/blue_isn"
                    android:paddingHorizontal="50dp"
                    android:text="@string/calc" />


            </LinearLayout>

        </FrameLayout>
    </androidx.cardview.widget.CardView>
</FrameLayout>