<?xml version="1.0" encoding="utf-8"?>
<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context=".ui.fragment.Love.ResultFragment">

    <androidx.cardview.widget.CardView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_margin="10dp"
        android:padding="16dp"
        app:cardCornerRadius="16dp"
        android:background="@drawable/bordered_background">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="vertical">

            <ImageView
                android:layout_width="wrap_content"
                android:layout_height="350dp"
                android:src="@drawable/item_result_heart"
                android:id="@+id/iv_result_heart"/>

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textSize="16sp"
                android:textColor="@color/black"
                android:text="@string/you"
                android:layout_gravity="center"
                android:id="@+id/tv_you_result"/>

            <ImageView
                android:layout_width="20dp"
                android:layout_height="20dp"
                android:src="@drawable/item_pink_heart"
                android:layout_gravity="center"
                android:layout_margin="5dp"
                android:id="@+id/iv_pink_heart"/>

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textSize="16sp"
                android:textColor="@color/black"
                android:text="@string/me"
                android:layout_gravity="center"
                android:id="@+id/tv_me_result"/>

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textSize="25sp"
                android:textColor="@color/pink"
                android:text="@string/score"
                android:textStyle="bold"
                android:layout_gravity="center"
                android:id="@+id/tv_result"/>

            <RelativeLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center">

                <ImageView
                    android:layout_width="90dp"
                    android:layout_height="90dp"
                    android:src="@drawable/item_pink_white_heart"
                    android:layout_gravity="center"
                    android:layout_margin="20dp"/>

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/procent"
                    android:gravity="center"
                    android:id="@+id/tv_procent"
                    android:layout_centerInParent="true"
                    android:textSize="16sp"
                    android:textStyle="bold"/>
            </RelativeLayout>
            <Button
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginHorizontal="100dp"
                android:backgroundTint="@color/blue_isn"
                android:text="@string/try_again"
                android:textColor="@color/black"
                android:textSize="18sp"
                android:id="@+id/btn_try_again"/>
        </LinearLayout>
    </androidx.cardview.widget.CardView>
</FrameLayout>
